<resources>
    <string name="app_name">Good Diary</string>
    <string name="search">Search</string>
    <string name="add_page">Add page</string>
    <string name="navigation_menu">navigation_menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_diaries">All Diaries</string>
    <string name="create_new_diary">Create New Diary</string>
    <string name="about_app">About app</string>
    <string name="version">Version 1.0</string>
    <string name="back_button">Back button</string>
    <string name="title">Title</string>
    <string name="date_time">Date Time</string>
    <string name="content">Content</string>
    <string name="this_is_preview_of_page">This is preview of page</string>
    <string name="diary_name">Diary name</string>
    <string name="create_diary">Create diary</string>
    <string name="image">Image</string>
    <string name="more_button">More button</string>
    <string name="delete_diary">Delete diary</string>
    <string name="there_is_no_diary_created_create_one">There is no diary created, create one</string>
    <string name="cancel">Cancel</string>
</resources>