<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_bar_view_background">

    <ImageView
        android:id="@+id/button_navigation_menu"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_menu"
        android:padding="16dp"
        android:contentDescription="@string/navigation_menu" />

    <EditText
        android:id="@+id/search_text_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="none"
        android:background="@drawable/search_bar_view_background"
        android:hint="@string/search"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintStart_toEndOf="@+id/button_navigation_menu"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/more_button"
        android:padding="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>